<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HearMe</string>
    <string name="action_settings">Settings</string>
    <string name="Yakutia">Якутия</string>
    <string name="btn_ok">Ок</string>
    <string name="btn_yes">Да</string>
    <string name="btn_no">Нет</string>
    <string name="btn_exit">Выйти</string>
    <string name="btn_again">Повтор</string>
    <string name="btn_add">ДОБАВИТЬ</string>
    <string name="btn_cancel">Отмена</string>
    <string name="load_data">Загрузка</string>
    <string name="no_connection">Подключение отсутствует</string>
    <string name="error_load_data">Ошибка при загрузке данных</string>
    <string name="error_send_data">Ошибка при отправке данных</string>
    <string name="button">Кнопка</string>
    <string name="comment_add_hint">Комментировать</string>
    <string name="filter_active">ФИЛЬТР: </string>
    <string name="filter_category">Категории</string>
    <string name="filter_fav_ads">Изб. объявления</string>
    <string name="filter_fav_users">Изб. пользователи</string>
    <string name="filter_search">Поиск</string>
    <string name="empty_list_view">В данной категории еще нет ни одного объявления. Добавь будь первым!</string>
    <string name="crash_toast_text">В приложении произошла ошибка. Отчет об ошибке будет отправлен разработчикам.</string>

    <!-- notif -->
    <string name="notif_ad_add">Добавление объявления</string>
    
    <!-- toast -->
    <string name="toast_need_auth">Необходима авторизация</string>

    <!-- Action Bar -->
    <string name="hint_text">Введите текст</string>

    <!-- Menu -->
    <string name="title_private">Личные</string>
    <string name="user_enter">Войти в профиль</string>
    <string name="add_ad">Добавить объявление</string>
    <string name="my_ad">Мои объявления</string>
    <string name="title_common">Основные</string>
    <string name="all_ad">Все объявления</string>
    <string name="ad_category">Категории</string>
    <string name="ad_favorite_users">Избранные пользователи</string>
    <string name="ad_favorite_ads">Избранные объявления</string>
    <string name="ad_filtr">фильтр</string>
    <string name="ad_search">Поиск</string>
    <string name="lower_bar">Нижняя панель</string>

    <!-- Registration -->
    <string name="enter">Вход</string>
    <string name="login_error">Неправильное имя пользователя или пароля</string>
    <string name="login">Логин</string>
    <string name="pass_text">Пароль</string>
    <string name="pass_confirm_text">Подтверждение пароля</string>
    <string name="email_text">Электронная почта</string>
    <string name="full_name_text">Полное имя</string>
    <string name="join">Войти</string>
    <string name="register">Регистрация</string>
    <string name="hint_reg_edit">Обязательно</string>
    <string name="role_login_character">Не менее 4-х символов</string>
    <string name="role_pass_character">Не менее 6-ти символов</string>
    <string name="error_space">Пробелы не допустимы</string>
    <string name="error_not_enough_character">Недостаточно символов</string>
    <string name="error_not_equal_pass">Пароли не совпадают</string>
    <string name="error_not_have_dog">"Неправильная электронная почта"</string>

    <!-- Ad Add -->
    <string name="ad_title">Заголовок</string>
    <string name="area_type">Город/Район</string>
    <string name="ad_type">Категория</string>
    <string name="ad_desc">Основной текст</string>
    <string name="ad_image">Добавить изображение</string>
    <string name="ad_chooce_image">Выбрать изображение</string>
    <string name="ad_error_title">Добавьте заголовок</string>
    <string name="ad_error_category">Выберите категорию</string>
    <string name="ad_error_desc">Добавьте основной текст объявления</string>

    <!-- Ad Details -->
    <string name="ad_email">Эл. почта</string>
    <string name="call">Позвонить</string>
    <string name="drawer_open">Открыть</string>
    <string name="drawer_close">Закрыть</string>
    <string name="search">Поиск</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="title_activity_start_load">StartLoadActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="icon_desc">Иконка</string>
    <string name="title_activity_login">Вход</string>
    <string name="title_activity_register">Регистрация</string>
    <string name="title_activity_profile_fragment">Профиль</string>
    <string name="title_activity_app_start">AppStartActivity</string>
    <string name="title_activity_ad_details">Подробная информация</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="exit_confirm">Вы хотите выйти?</string>
    <string name="exit">Выйти</string>
    <string name="title_activity_ad_images">Изображение</string>
    <string name="fav_ad">fav_ad</string>
    <string name="fav_user">fav_user</string>
    <string name="title_activity_profile">Профиль</string>
    <string name="title_activity_ad_add">Добавление объявления</string>
    <string name="share">Поделиться</string>
    <string name="save">Сохранить</string>
    <string name="title_activity_category">Категории</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_full_slide">FullSlideActivity</string>

</resources>
