<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/gradient_selector"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:layout_width="match_parent"
	   	android:layout_height="wrap_content"
	   	android:layout_margin="25dp"
	   	android:paddingTop="20dp"
	   	android:paddingBottom="20dp"
	   	android:gravity="center"
    	android:orientation="vertical"
	   	android:background="@android:color/white"
        >
	    <TextView 
	        android:id="@+id/login_text"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:textSize="24sp"
	    	android:textColor="@color/night_green"
	    	android:text="@string/login"
	        />
	    <EditText
	        android:id="@+id/login_edit"
	        android:layout_width="200dp"
	    	android:layout_height="wrap_content"
	    	android:inputType="textPersonName"
        />
	    <TextView 
	        android:id="@+id/pass_text"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:textSize="24sp"
	    	android:textColor="@color/night_green"
	    	android:text="@string/pass_text"
	        />
	    <EditText
	        android:id="@+id/pass_edit"
	        android:layout_width="200dp"
	    	android:layout_height="wrap_content"
	    	android:inputType="textPassword"
        />
	    <Button 
	        android:id="@+id/join_btn"
	        android:layout_width="200dp"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="4dp"
	    	android:text="@string/join"
	    	android:textStyle="bold"
	    	android:textColor="@android:color/white"
	    	android:background="@drawable/selector_button"
	        />
	    <Button 
	        android:id="@+id/register_btn"
	        android:layout_width="200dp"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="4dp"
	    	android:text="@string/register"
	    	android:textStyle="bold"
	    	android:textColor="@android:color/white"
	    	android:background="@drawable/selector_button"
	        />
	 </LinearLayout>
</LinearLayout>
