<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_selector" >
    
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:layout_centerInParent="true"
    	android:gravity="center"
        >
        <TextView 
		    android:id="@+id/app_name"
		    android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/app_name"
	    	android:textSize="24sp"
	    	android:textColor="@android:color/white"
	    />
		<TextView 
		    android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/Yakutia"
	    	android:textSize="12sp"
	    	android:layout_marginLeft="50dp"
	    	android:textStyle="italic"
	    	android:textColor="@android:color/white"
		    />
    </LinearLayout>
	
	<LinearLayout
	    android:id="@+id/error_layout"
	    android:layout_width="match_parent"
	    android:layout_height="230dp"
	    android:layout_alignParentBottom="true"
	    android:gravity="center"
	    android:orientation="vertical"
	    >
		<TextView
	            android:id="@+id/error_text"
	            android:layout_width="250dp"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:textColor="@android:color/white"
	            android:textSize="20sp"
	   			/>
		<LinearLayout
	        android:layout_width="match_parent"
	   		android:layout_height="180dp"
	   		android:orientation="horizontal"
	   		android:gravity="center"
            >
			
            <RelativeLayout 
                android:layout_width="match_parent"
    			android:layout_height="match_parent"
    			android:gravity="center"
    			android:layout_weight=".5"
                >
                <View
	                android:id="@+id/btn_repeat"
	                android:layout_width="100dp"
	                android:layout_height="100dp"
	                android:layout_centerInParent="true"
	                android:background="@drawable/pulse_white_circle"
                />
                <TextView
                    android:id="@+id/repeat_text"
                    android:layout_width="100dp"
    				android:layout_height="wrap_content"
    				android:layout_centerInParent="true"
    				android:gravity="center"
    				android:textSize="20sp"
    				android:textColor="@color/night_green"
    				android:text="@string/btn_again"
                    />
            </RelativeLayout>
            <RelativeLayout 
                android:layout_width="match_parent"
    			android:layout_height="match_parent"
    			android:gravity="center"
    			android:layout_weight=".5"
                >
                <View
	                android:id="@+id/btn_exit"
	                android:layout_width="100dp"
	                android:layout_height="100dp"
	                android:layout_centerInParent="true"
	                android:background="@drawable/pulse_white_circle"
                />
                <TextView
                    android:id="@+id/exit_text"
                    android:layout_width="100dp"
    				android:layout_height="wrap_content"
    				android:layout_centerInParent="true"
    				android:gravity="center"
    				android:textSize="20sp"
    				android:textColor="@color/night_green"
    				android:text="@string/btn_exit"
                    />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
	<View 
	    android:id="@+id/load_circle"
	    android:layout_width="30dp"
	    android:layout_height="30dp"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:layout_marginBottom="30dp"
	    android:background="@drawable/pulse_white_circle"
	    />
</RelativeLayout>
